# x-compiler

./: .clangd  .gitignore  CMakeLists.txt  todolist.txt
backend/: CMakeLists.txt
backend/include/: CMakeLists.txt
backend/include/dialect/top/: CMakeLists.txt
backend/include/dialect/top/IR/: CMakeLists.txt  TopAttrs.td  TopDialect.td  TopOps.hpp  TopOps.td  TopTraits.hpp  TopTraits.td  TopTypes.td
backend/include/dialect/top/Interfaces/: CMakeLists.txt  OpInterfaces.td
backend/include/dialect/top/Transforms/: CMakeLists.txt  TopDialectPasses.hpp  TopDialectPasses.td
backend/lib/: CMakeLists.txt
backend/lib/dialect/linalg/: CMakeLists.txt  TilingConfigManager.cpp  TilingConfigManager.hpp
backend/lib/dialect/top/: CMakeLists.txt
backend/lib/dialect/top/IR/: OpTiling.cpp  TopOps.cpp
backend/lib/dialect/top/Interfaces/: ShapeInfer.cpp
backend/lib/dialect/top/Transforms/: TopOpCheckPass.cpp  TopOpTilingPass.cpp
backend/lib/dialect/top/Transforms/Patterns/: TopOpAttrConfig.cpp  TopOpAttrConfig.hpp  TopOpTilingRewritter.cpp  TopOpTilingRewritter.hpp
backend/tools/: CMakeLists.txt  xc-mlir-opt.cpp
backend/utils/: CMakeLists.txt  com_utils.cpp  com_utils.hpp
tests/: add.mlir  linalg.mlir  matmul_tile_transform.mlir
